Mon Mar 09 03:07:36 GMT 2015  Olly Betts <olly@survex.com>

	* include/xapian/constants.h,include/xapian/queryparser.h,
	  include/xapian/weight.h: Doxygen comment formatting tweaks.

Sat Mar 07 11:27:23 GMT 2015  Olly Betts <olly@tartarus.org>

	* queryparser/queryparser.lemony,tests/queryparsertest.cc: Extend the
	  set of characters allowed in the start of a range to be anything
	  except for '(' and characters <= ' '.  This better matches what's
	  accepted for a range end (anything except for ')' and characters <=
	  ' ').  Reported by Jani Nikula.

Thu Mar 05 11:13:56 GMT 2015  Olly Betts <olly@survex.com>

	* backends/dbcheck.cc: When checking a single table, handle the
	  ".glass" extension on glass database tables, and use the extension
	  to guide the decision of which backend the table is from.

Thu Mar 05 04:38:21 GMT 2015  Olly Betts <olly@survex.com>

	* backends/dbcheck.cc: Don't hard-code string length as number.

Mon Feb 23 04:48:24 GMT 2015  Olly Betts <olly@survex.com>

	* api/emptypostlist.cc,api/emptypostlist.h: Fix handling of
	  OP_WILDCARD which expands to no terms when used under OP_SYNONYM.
	* tests/api_query.cc: Regression test dualprefixwildcard1.

Mon Feb 23 04:26:52 GMT 2015  Olly Betts <olly@survex.com>

	* tests/harness/testsuite.cc: Fix compilation issue with previous
	  change.

Thu Feb 19 08:04:17 GMT 2015  Olly Betts <olly@survex.com>

	* tests/api_anydb.cc,tests/api_nodb.cc,tests/harness/testrunner.cc,
	  tests/harness/testsuite.cc,tests/stemtest.cc: Use std::string's
	  assign() or construct from substring rather than assigning or
	  initialising with the result of calling substr().

Tue Feb 17 18:31:25 GMT 2015  Olly Betts <olly@survex.com>

	* include/Makefile.mk: Ship new file from previous commit.

Tue Feb 17 05:14:02 GMT 2015  Olly Betts <olly@survex.com>

	* api/Makefile.mk,api/constinfo.cc,api/version.cc,include/xapian.h,
	  include/xapian/constinfo.h,include/xapian/stem.h,languages/stem.cc: