@@ -1,3 +1,8 @@
+Mon Mar 09 03:08:14 GMT 2015  Olly Betts <olly@survex.com>
+
+	* include/xapian/constants.h,include/xapian/queryparser.h: Doxygen
+	  comment wording tweaks.
+
 Mon Mar 09 03:07:36 GMT 2015  Olly Betts <olly@survex.com>
 
 	* include/xapian/constants.h,include/xapian/queryparser.h,
